# cmake_gtest

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
src/: Example.cpp  Example.hpp  New Text Document.txt  dep.cpp  dep.hpp
test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Exampletests.cpp  Makefile  cmake_install.cmake
